--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           
             <div class="content-container">
               <p style="font-family: papyrus;font-style: italic;text-shadow: 1px 1px 3px red;" id="pp">LOVE AT First BITE</p>
-             <a href="earnest-cocada-67bb02.netlify.app"> <button style="height: 4rem;width: 12rem;border: 1px solid white;background-color: rgb(218, 32, 32);font-family: papyrus;color: yellow;text-align: center;text-shadow: 1px 1px 2px white;font-size: larger;border-radius: 10px;">Explore Our Menu</button></a>
+             <a href="https://earnest-cocada-67bb02.netlify.app/"> <button style="height: 4rem;width: 12rem;border: 1px solid white;background-color: rgb(218, 32, 32);font-family: papyrus;color: yellow;text-align: center;text-shadow: 1px 1px 2px white;font-size: larger;border-radius: 10px;">Explore Our Menu</button></a>
             </div>
           </div>
           
