--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="text"><p><a href="">Contact Us</a></p></div>
             <div class="text"><p><a href="">Services</a></p></div>
             <div class="text"><p><a href="">Shop Now</a></p></div>
-            <div class="text"><a href="" id="user"><i class="fa-regular fa-user"></i></a></i></div>
+            <div class="text"><a href="https://jocular-bienenstitch-3c58a1.netlify.app/" id="user"><i class="fa-regular fa-user"></i></a></i></div>
             <div class="text"><a href="" id="loc"><i class="fa-solid fa-location-dot"></i></a></i></div>
             <div class="text"><input type="search" placeholder="Search"></div>
             </div>
