--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
               </video>
         <div class="header">
             <div class="text"><p><a href="">Home</a></p></div>
-            <div class="text"><p><a href="">About</a></p></div>
-            <div class="text"><p><a href="">Contact Us</a></p></div>
+            <div class="text"><p><a href="https://genuine-faun-459a04.netlify.app/">About</a></p></div>
+            <div class="text"><p><a href="https://fancy-alpaca-3090e4.netlify.app/">Contact Us</a></p></div>
             <div class="text"><p><a href="">Services</a></p></div>
             <div class="text"><p><a href="">Shop Now</a></p></div>
             <div class="text"><a href="https://superlative-mousse-50c380.netlify.app/" id="user"><i class="fa-regular fa-user"></i></a></i></div>
